kuber/gitops/openldap/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openldap
  labels:
    name: openldap
