kuber/gitops/openldap/openldap-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: openldap
  labels:
    app.kubernetes.io/name: openldap
spec:
  serviceName: openldap
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: openldap
  template:
    metadata:
      labels:
        app.kubernetes.io/name: openldap
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: devicehub.role
                    operator: In
                    values:
                      - storage
      containers:
        - name: openldap
          image: osixia/openldap:1.5.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 389
              name: ldap
          readinessProbe:
            tcpSocket:
              port: 389
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
          livenessProbe:
            tcpSocket:
              port: 389
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 6
          volumeMounts:
            - name: openldap-data
              mountPath: /var/lib/ldap
              subPath: database
            - name: openldap-data
              mountPath: /etc/ldap/slapd.d
              subPath: config
      volumes:
        - name: openldap-data
          persistentVolumeClaim:
            claimName: openldap-data-pvc
