kuber/gitops/openldap/phpldapadmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpldapadmin
  labels:
    app.kubernetes.io/name: phpldapadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: phpldapadmin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: phpldapadmin
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: devicehub.role
                    operator: In
                    values:
                      - storage
      containers:
        - name: phpldapadmin
          image: osixia/phpldapadmin:0.9.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
