kuber/gitops/openldap/openldap-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openldap
  labels:
    app.kubernetes.io/name: openldap
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: openldap
  ports:
    - name: ldap
      port: 389
      protocol: TCP
      targetPort: 389
