kuber/gitops/openldap/phpldapadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpldapadmin
  labels:
    app.kubernetes.io/name: phpldapadmin
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: phpldapadmin
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
